# bayesian-weather-forecasting

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  bnn_ens.yaml  bnn_mc.yaml
data/processed/: metadata.csv
data/processed/stations/: boscombe.csv  hampstead.csv  oxford.csv  wisley.csv
results/baselines/: oxford_metrics.csv  oxford_test_preds.csv  oxford_train_preds.csv  oxford_val_preds.csv  wisley_metrics.csv  wisley_test_preds.csv  wisley_train_preds.csv  wisley_val_preds.csv
results/models/oxford/: oxford_features.json  oxford_mc_model.pth  oxford_scaler.joblib  oxford_test_bnn.csv  oxford_test_metrics.json  oxford_train_bnn.csv  oxford_train_metrics.json  oxford_val_bnn.csv  oxford_val_metrics.json
results/models/wisley/: wisley_config.json  wisley_mc_model.pth  wisley_scaler.joblib  wisley_test_bnn.csv  wisley_test_metrics.json  (+4 more)
results/preds/: oxford_climatology_test.csv  oxford_climatology_train.csv  oxford_climatology_val.csv  oxford_persistence_test.csv  oxford_persistence_train.csv  oxford_persistence_val.csv  oxford_ridge_test.csv  oxford_ridge_train.csv  oxford_ridge_val.csv  wisley_climatology_test.csv  wisley_climatology_train.csv  wisley_climatology_val.csv  wisley_persistence_test.csv  wisley_persistence_train.csv  wisley_persistence_val.csv  wisley_ridge_test.csv  wisley_ridge_train.csv  wisley_ridge_val.csv
src/: data_cleaning.py
src/features/: build_features.py
src/metrics/: calibration.py
src/models/: train_baselines.py  train_bnn.py
src/utils/: config.py
src/viz/: make_plots.py  make_uncertainty_plots.py  plots.py
